# watermarking

./: LICENSE  Makefile  README.md  params.yaml  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.01-imc-initial-data-exploration-1.ipynb  0.01-imc-initial-exploratory-data-1.ipynb  Avance1.5Equipo.ipynb  Avance2.5Equipo.ipynb  Avance3.5Equipo.ipynb  Avance4.5Equipo.ipynb  Avance4.5Equipov2.ipynb  Avance5.5Equipo.ipynb  Avance5.5Equipo_Isaac.ipynb  Feature_Engineering.ipynb  Prueba_Concepto.ipynb  README.md
watermark/: __init__.py  config.py  dataset.py  features.py  plots.py
watermark/modeling/: predict.py  train.py
