[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "watermark"
version = "0.0.1"
description = "El proyecto al ser de investigaci\u00f3n actualmente tiene un avance previo que este ser\u00e1 el punto de partida donde se cuenta con la prueba de concepto, una IA capaz de generar marcas de agua y un modelo detector que determina si una firma contiene o no una marca de agua, el siguiente avance en el proyecto es generar marcas de agua basadas en una estampa de tiempo donde la IA tendr\u00e1 como salida esperada la fecha en que fue escrita la firma, de igual manera se realizar\u00e1 la mejora de escalabilidad del proyecto para hacerlo m\u00e1s robusto para futuros avances por parte de otros equipos."
authors = [
  { name = "Team 05 Proyecto Integrador" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["watermark"]
force_sort_within_sections = true
